Added New Loading Screen

--- a/BrowserAssets/image_container.html
+++ b/BrowserAssets/image_container.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<div class="verticalhorizontal">
-		<img id="image-container" src="loading.jpg" alt="centered image" />
+		<img id="image-container" src="waitingscreen.jpg" alt="centered image" />
 	</div>
 </body>
 </html>
